Realizando Deploy com banco Railay

--- a/variaveis.env
+++ b/variaveis.env
@@ -1,7 +1,8 @@
 PORT=3000
 
-DB_HOST=localhost
+DB_HOST=monorail.proxy.rlwy.net
 DB_USER=root
-DB_PASS=abc36415514.
-DB_NAME=apicarrosdb
-DB_PORT=3306
+DB_PASS=35DehgGGC1db4gBC15CCegD34bgAfe6f
+DB_NAME=railway
+DB_PORT=52159
+DB_URI=mysql://root:35DehgGGC1db4gBC15CCegD34bgAfe6f@monorail.proxy.rlwy.net:52159/railway
